# won_habit

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency_days.py  0002_habit_frequency.py  0003_alter_habit_action_alter_habit_frequency_days_and_more.py  0003_alter_habit_frequency.py  0004_remove_habit_frequency_required_for_useful_and_more.py
htmlcov/: index.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
