[tool.poetry]
name = "won-habit"
version = "0.1.0"
description = ""
authors = ["Olga Kazorina <nefertituolga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
djangorestframework = "^3.16.0"
pillow = "^11.3.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
ipython = "^9.4.0"
django-stubs = "^5.2.2"
djangorestframework-stubs = "^3.16.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.9.2"
drf-yasg = "^1.21.10"
forex-python = "^1.9.2"
celery = "^5.5.3"
eventlet = "^0.40.2"
redis = "^6.2.0"
django-celery-beat = "^2.8.1"
django-cors-headers = "^4.7.0"
parameterized = "^0.9.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
exclude = ["venv", "tests", "phonenumber_field", ".*migrations/.*", ]
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    )/
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip_gitignore = true

[tool.flake8]
max-line-length = 119
ignore = "E503, E121, E122, E501"
exclude =  [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "*.min.js",
    "*.min.css",
    "build",
    "dist",
    "migrations"
]
[tool.django-stubs]
django_settings_module = "config.settings"
strict_settings = true